<resources>
    <string name="app_name">My Coffee</string>
    <string name="login">Giriş yap</string>
    <string name="sign_up">Üye ol</string>
    <string name="e_mail_hint">E-posta adresinizi girin</string>
    <string name="full_name_hint">İsminizi girin</string>
    <string name="password_hint">Şifrenizi girin</string>
    <string name="settings">Ayarlar</string>
    <string name="scan_qr">QR Okut</string>
    <string name="give_star">Yıldız Tanımla</string>
    <string name="use_gift">İkram Kullan</string>
    <string name="remove_employee">Çalışanı silmek istediğinden emin misin ?</string>
    <string name="yes">Evet</string>
    <string name="cancel">İptal</string>
    <string name="customer">Müşteri : </string>
    <string name="cashier">Kasiyer : </string>
</resources>